etl.yaml
kind: Pod
apiVersion: v1
metadata:
  name: etl

spec:
  volumes:
    # To create the credentials config run --
    # kubectl create configmap gen3-credentials --from-file Secrets
    - name: gen3-credentials
      configMap:
        name: gen3-credentials

    - name: useryaml
      configMap:
        name: useryaml


  containers:
    - name: container-configmap
      image: quay.io/ohsu-comp-bio/aced-etl:feature_parent-specimens
      imagePullPolicy: Always
      volumeMounts:
        # Gen3 credentials file
        - name: gen3-credentials
          mountPath: /creds/credentials.json
          subPath: credentials.json


        # User yaml, configmap defined in helm/fence/templates/useryaml-job.yaml
        - name: useryaml
          mountPath: /creds/user.yaml
          subPath: useryaml


      command: ["/bin/bash" ]
      args:
        - "-c"
        - |
          while true; do sleep 30; done;
