pelican.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pelican-pod
spec:
  volumes:
    - name: pelican-creds-volume
      secret:
        secretName: pelicanservice-g3auto
    - name: peregrine-creds-volume
      secret:
        secretName: peregrine-creds
  containers:
  - name: pelican-container
    image: pelican:test
    imagePullPolicy: Never
    command: ["/bin/sh"]
    args: ["-c", "cd / && tail -f /dev/null"]
    ports:
    - containerPort: 80
    volumeMounts:
      - name: pelican-creds-volume
        readOnly: true
        mountPath: "/pelican-creds.json"
        subPath: config.json
      - name: peregrine-creds-volume
        readOnly: true
        mountPath: "/peregrine-creds.json"
        subPath: creds.json
