gen3-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: revproxy
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  revproxy-service
                port:
                  number: 80
